# neo-fm

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  STARTUP.md  STATUS.md  neo-fm_music_platform_06aedd70.plan.md  package.json  pnpm-lock.yaml  project-research.md  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  docker-build.yml
apps/web/: .env.example  middleware.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
demos/: phase-0-NOTE.md  phase-0-dgx.txt  phase-1-SMOKE-HANDOFF.md  phase-2-SMOKE-HANDOFF.md  phase-2-request.golden.json  phase-3-SMOKE-HANDOFF.md  phase-3-request.golden.json
demos/v1.1/: SMOKE-HANDOFF.md  advisor-sweep-2026-05-16.md  routes-inventory.md
demos/v1.2/: merge-gate.md  phase-6-gate.md  sprint-3-email-smoke.md  sprint-5-stripe-handover.md
demos/v1.3/: merge-gate.md
demos/v1.4/: adversarial-review.md  merge-gate.md
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  OPERATOR-HANDOFF.md  PHASE-4-HANDOFF.md  PHASE-4-HANDOFF.md.workflow.yml  PRD.md  PRODUCTION-MIGRATION.md  REPRODUCIBILITY.md  RUNBOOK.md  SECURITY.md  SPEC.md  supabase_api_instruction.md
docs/DECISIONS/: 0001-queue.md  0002-license.md  0003-internal-api-hmac.md  0004-worker-db-role.md  0005-storage-retention.md  0006-lyrics-provenance.md  0007-observability-from-phase-1.md  0008-pgmq-leases.md  0009-quota-reconciliation.md  0010-vocal-stack-licensing.md  0011-governor-and-leases.md  0012-signed-url-playback.md  0013-public-share-surface.md  0014-quota-completed-only-plus-concurrent-cap.md  0015-vocal-synth-and-mixer.md  0016-governor-implementation.md  0017-observability-stack.md  0019-app-shell-and-auth-lifecycle.md  0020-vocal-synth-multi-backend-and-eval.md  0021-security-definer-review.md  0022-transactional-email-wiring.md  0023-stripe-billing-wiring.md  0033-nemo-kannada-tts.md  0034-sanskrit-chant-style-adapter.md  0036-rlhf-reranker.md  README.md
evals/v1.4-bench/: README.md  pyproject.toml
evals/v1.4-bench/prompts/: bhavageete.yaml  bollywood.yaml  carnatic.yaml  hindustani.yaml  kabir.yaml  rabindrasangeet.yaml  sanskrit-shloka.yaml  tagore.yaml  tamil-folk.yaml  western.yaml
evals/v1.4-bench/scripts/: bench_loader.py  run_bench.py  score_run.py
evals/v1.4-bench/tests/: test_bench_loader.py
infra/: .env.dgx.example  docker-compose.dgx.yml  prometheus.yml
scripts/: MODEL_CACHE.md  build-demo.sh  dgx-bootstrap.sh  dgx-smoke.sh  download-heartmula.py  neo-fm-governor.py  song-doc-codegen.py  verify-lyrics-provenance.py
services/cover-art-synth/: Dockerfile  README.md  pyproject.toml
services/cover-art-synth/app/: __init__.py  metrics.py  model.py  serve.py
services/cover-art-synth/tests/: test_model.py  test_serve.py
services/dgx-worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/dgx-worker/app/: bench_dispatch.py  config.py  cover_art_client.py  cover_art_worker.py  db.py  governor.py  inference_client.py  lyric_gen_client.py  metrics.py  mixer.py  models.py  pwm_client.py  stem_planner.py  stems_client.py  storage.py  vocal_client.py  worker.py
services/dgx-worker/tests/: fakes.py  test_bench_dispatch.py  test_cover_art_worker.py  test_governor.py  test_inference_client.py  test_metrics.py  test_mixer.py  test_models.py  test_pwm_integration.py  test_stem_planner.py  test_storage.py  test_worker.py  test_worker_top_n.py  test_worker_vocal.py
services/lyric-gen/: Dockerfile  README.md  pyproject.toml  train.py
services/lyric-gen/app/: __init__.py  metrics.py  model.py  serve.py
services/lyric-gen/scripts/: eval.py  prepare_dataset.py
services/lyric-gen/tests/: test_eval.py  test_model.py  test_prepare_dataset.py  test_serve.py
services/music-inference/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/music-inference/app/: metrics.py  model.py  musicgen_model.py  routing.py  serve.py
services/music-inference/scripts/: _corpus_pipeline.py  _lora_trainer.py  _musicgen_lora_trainer.py  curate_bhavageete.py  curate_carnatic.py  curate_hindustani.py  curate_tamil_folk.py  mos_eval.py  train_bhavageete_lora.py  train_musicgen_carnatic_lora.py  train_musicgen_hindustani_lora.py  train_tamil_folk_lora.py
services/music-inference/tests/: test_curate_bhavageete.py  test_curate_carnatic.py  test_curate_hindustani.py  test_curate_tamil_folk.py  test_healthz.py  test_lora_adapter.py  test_model.py  test_mos_eval.py  test_musicgen_lora_trainers.py  test_musicgen_model.py  test_routing.py  test_serve.py  test_train_bhavageete_lora.py  test_train_tamil_folk_lora.py
services/pwm-api/: Dockerfile  README.md  pyproject.toml  serve.py
services/pwm-api/tests/: conftest.py  test_serve.py
services/reranker/: README.md  pyproject.toml
services/reranker/neofm_reranker/: data.py  model.py  score.py  train.py  train_apply.py
services/reranker/tests/: test_data.py  test_model.py  test_train.py
services/stems-synth/: README.md  pyproject.toml
services/stems-synth/app/: __init__.py  metrics.py  model.py  serve.py
services/stems-synth/scripts/: curate_stems.py  train_stems_lora.py
services/stems-synth/tests/: test_curate_stems.py  test_model.py  test_serve.py  test_train_stems_lora.py
services/vocal-synth/: Dockerfile  README.md  pyproject.toml
services/vocal-synth/app/: __init__.py  chant_style.py  eval.py  indicf5.py  metrics.py  model.py  nemo.py  parler.py  preprocess.py  routing.py  serve.py  voice_catalog.json  voice_catalog.py
services/vocal-synth/data/voice-benchmark/: prompts.jsonl
services/vocal-synth/scripts/: curate_kannada_tts.py  curate_sanskrit_chant.py  render_voice_previews.py  train_chant_style_lora.py  train_kannada_nemo.py  voice_benchmark.py
services/vocal-synth/tests/: test_chant_style.py  test_curate_kannada_tts.py  test_curate_sanskrit_chant.py  test_eval.py  test_indicf5.py  test_model.py  test_nemo.py  test_preprocess.py  test_routing.py  test_serve.py  test_train_chant_style_lora.py  test_train_kannada_nemo.py  test_voice_benchmark.py  test_voice_catalog.py
(+364 files in other folders)
