[project]
name = "neo-fm-v14-bench"
version = "0.0.0"
description = "100-prompt v1.4 bench harness (loader/runner/scorer)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
# The bench scripts include deliberate "10 styles x 10 prompts"
# notation with the math multiplication sign in comments/docstrings.
"scripts/bench_loader.py" = ["RUF001", "RUF002", "RUF003"]
"scripts/run_bench.py" = ["RUF001", "RUF002", "RUF003", "E501"]
"scripts/score_run.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "scripts"

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*", "bench_loader", "run_bench", "score_run"]
disable_error_code = [
  "arg-type",
  "no-untyped-def",
  "no-untyped-call",
  "unused-ignore",
  "import-untyped",
  "import-not-found",
  "no-any-return",
  "call-overload",
  "attr-defined",
]
