[project]
name = "neo-fm-cover-art-synth"
version = "0.1.0"
description = "Cover-art generation sidecar (Z-Image-Turbo / SDXL-Turbo) for neo-fm. Internal HMAC API, never internet-facing."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9.0",
  "numpy>=1.26",
  "pillow>=10.4",
  "prometheus_client>=0.20",
]

[project.optional-dependencies]
# Only installed on the DGX where the real diffusion pipeline runs.
# CI / unit tests rely on the FakeCoverArtModel path and skip these.
diffusion = [
  "torch>=2.4",
  "diffusers>=0.30",
  "transformers>=4.45",
  "huggingface_hub>=0.25",
  "accelerate>=0.34",
  "safetensors>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
