[project]
name = "neo-fm-cover-art-synth"
version = "0.1.0"
description = "Cover-art generation sidecar (Z-Image-Turbo / SDXL-Turbo) for neo-fm. Internal HMAC API, never internet-facing."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9.0",
  "numpy>=1.26",
  "pillow>=10.4",
  "prometheus_client>=0.20",
]

[project.optional-dependencies]
# Only installed on the DGX where the real diffusion pipeline runs.
# CI / unit tests rely on the FakeCoverArtModel path and skip these.
diffusion = [
  "torch>=2.4",
  # 0.36 is the first release that exposes `ZImagePipeline` /
  # `ZImageTransformer2DModel` (the classes declared by
  # Tongyi-MAI/Z-Image-Turbo's model_index.json). Older diffusers
  # fall back to AutoPipelineForText2Image, which won't work for
  # Z-Image-Turbo -- so the pin is load-bearing for the prod default.
  "diffusers>=0.36",
  "transformers>=4.45",
  "huggingface_hub>=0.25",
  "accelerate>=0.34",
  "safetensors>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
  "arg-type",
  "no-untyped-def",
  "no-untyped-call",
  "unused-ignore",
  "import-untyped",
  "import-not-found",
  "no-any-return",
]

# Dynamic diffusion loaders pull torch/diffusers symbols that mypy can
# only resolve when the optional deps are installed.
[[tool.mypy.overrides]]
module = "app.model"
disable_error_code = ["unused-ignore"]
