[project]
name = "neo-fm-dgx-worker"
version = "0.0.0"
description = "DGX-side worker: polls pgmq, calls music-inference, uploads to Supabase Storage."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.9.0",
  "psycopg[binary]>=3.2",
  "numpy>=1.26",
  "soundfile>=0.12",
  "prometheus_client>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

# Test fakes intentionally duck-type the concrete worker dependencies
# (FakeWorkerDB, FakeInferenceClient, FakeStorageClient, ...) instead
# of implementing the full real classes. We keep `app/` under full
# strict-mode typing; the test directory is allowed to use the fakes
# without rewriting every dependency into a Protocol.
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
  "arg-type",
  "no-untyped-def",
  "unused-ignore",
  "import-untyped",
  "no-any-return",
  "import-not-found",
  "str-bytes-safe",
]

# soundfile ships no py.typed marker; app/mixer.py guards every call with
# a narrow shim, so we accept the import as untyped at the module level.
[[tool.mypy.overrides]]
module = "soundfile"
ignore_missing_imports = true
