[project]
name = "neo-fm-lyric-gen"
version = "0.1.0"
description = "Indic lyric generation sidecar (IndicBART SFT) for neo-fm. Internal HMAC API, never internet-facing. v1.4 Sprint 7."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9.0",
  "prometheus_client>=0.20",
  # PyYAML is needed by scripts/prepare_dataset.py to read corpus
  # frontmatter; it's also a transitive dep of uvicorn[standard].
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Only installed on the DGX where the real IndicBART pipeline runs.
# CI / unit tests rely on the FakeLyricGenModel path and skip these.
training = [
  "torch>=2.4",
  "transformers>=4.45",
  "datasets>=3.0",
  "huggingface_hub>=0.25",
  "accelerate>=0.34",
  "safetensors>=0.4",
  "peft>=0.13",
  "sentencepiece>=0.2",
  "protobuf>=4.25",
  "indic-nlp-library>=0.92",
  "evaluate>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

# IPA phonemes (ɑ ə ɛ ɪ ɔ ʊ) are deliberate. Ignore RUF001 here only.
[tool.ruff.lint.per-file-ignores]
"app/model.py" = ["RUF001"]
"scripts/eval.py" = ["RUF001"]
"scripts/prepare_dataset.py" = ["RUF001"]
# Prompt fixtures contain literal training prompts that intentionally
# exceed the 100-col line limit.
"tests/test_eval.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "scripts"

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*", "train", "prepare_dataset", "eval"]
disable_error_code = [
  "arg-type",
  "no-untyped-def",
  "unused-ignore",
  "import-untyped",
  "no-any-return",
  "import-not-found",
]

[[tool.mypy.overrides]]
module = ["app.model", "app.serve", "app.metrics"]
disable_error_code = ["unused-ignore", "arg-type"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
