[project]
name = "neo-fm-music-inference"
version = "0.1.0"
description = "FastAPI front for HeartMuLa music generation on DGX Spark."
readme = "README.md"
# nvcr.io/nvidia/pytorch:24.08-py3 ships python 3.10. We support both
# 3.10 and 3.12 so the CI smoke + DGX runtime use the same code.
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9.0",
  "prometheus_client>=0.20",
  # PyYAML is needed by scripts/curate_bhavageete.py (validate stage,
  # which runs in CI). Also a transitive dep of uvicorn[standard].
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Only installed on the DGX, where the heartlib + heartcodec pipeline
# emits raw PCM/MP3 that occasionally needs format normalisation.
# Skipped in CI to keep the smoke build fast.
audio = [
  "soundfile>=0.12",
  "numpy>=1.26",
]
# huggingface_hub powers scripts/download-heartmula.py. Optional so
# the music-inference container itself doesn't have to ship it
# (operator pulls weights from the DGX host before bringing the
# stack up).
hub = [
  "huggingface_hub>=0.25",
]
# v1.4 Sprint 8 LoRA training (HeartMuLa) and Sprint 10 (MusicGen).
# DGX-only — pulls torch + peft + audiocraft. Curation deps
# (pyloudnorm, whisperx, silero-vad) need to be added per-stage if
# you want to run the heavy stages on DGX. CI only exercises the
# scaffold (run with `--dry-run`). `audiocraft` is added by the
# operator via `uv pip install` because it's git-only at the
# version we target; see docs/DECISIONS/0030 for the install line.
training = [
  "torch>=2.4",
  "transformers>=4.45",
  "peft>=0.13",
  "datasets>=3.0",
  "accelerate>=1.0",
  "trackio>=0.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
