[project]
name = "neo-fm-reranker"
version = "0.0.0"
description = "Deterministic offline reranker for top-N audio candidates."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neofm_reranker"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests load source via sys.path tricks; E402 is intentional.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
# Tell mypy to treat this directory as a single rooted package (the
# parent services/ has an __init__.py for historical reasons).
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
  "arg-type",
  "no-untyped-def",
  "no-untyped-call",
  "unused-ignore",
  "import-untyped",
  "no-any-return",
  "import-not-found",
]
