[project]
name = "neo-fm-stems-synth"
version = "0.1.0"
description = "Stable Audio Open stems-synth sidecar (transitions, percussion beds, ambience) for neo-fm. Internal HMAC API, never internet-facing. v1.4 Sprint 11."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9.0",
  "prometheus_client>=0.20",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# DGX-only — Stable Audio Open requires diffusers + `stable-audio-tools`
# (which transitively pulls a wandb-0.15.x with a broken `pathtools` dep).
# Operators install stable-audio-tools manually on DGX so the CI dev
# environment isn't polluted. See docs/DECISIONS/0031 for the install
# line:
#     uv pip install 'stable-audio-tools @ git+https://github.com/Stability-AI/stable-audio-tools@v0.0.19'
training = [
  "torch>=2.4",
  "transformers>=4.45",
  "diffusers>=0.32",
  "peft>=0.13",
  "datasets>=3.0",
  "accelerate>=0.34",
  "safetensors>=0.4",
  "huggingface_hub>=0.25",
  "soundfile>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
