[project]
name = "neo-fm-vocal-synth"
version = "0.1.0"
description = "Indic singing voice synthesis (kenpath/svara-tts-v1 + Indic-Parler) for neo-fm."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9.0",
  "numpy>=1.26",
  "soundfile>=0.12",
]

[project.optional-dependencies]
# Only installed on the DGX where the real TTS pipeline runs.
# CI / unit tests rely on the FakeVocalModel path and skip these.
tts = [
  "transformers>=4.45",
  "torch>=2.4",
  "huggingface_hub>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
