[project]
name = "neo-fm-vocal-synth"
version = "0.1.0"
description = "Indic singing voice synthesis (kenpath/svara-tts-v1 + Indic-Parler) for neo-fm."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9.0",
  "numpy>=1.26",
  "soundfile>=0.12",
  "prometheus_client>=0.20",
]

[project.optional-dependencies]
# Only installed on the DGX where the real TTS pipeline runs.
# CI / unit tests rely on the FakeVocalModel path and skip these.
tts = [
  "transformers>=4.45",
  "torch>=2.4",
  "huggingface_hub>=0.25",
  # Orpheus SNAC codec for kenpath/svara-tts-v1 audio token decoding
  "snac>=1.2.1",
  # ParlerTTS for ai4bharat/indic-parler-tts
  "parler_tts>=0.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

# IPA characters (ʰ, ː, ɛ, ə, ɑ, ɪ, ɔ, ʊ, etc.) are intentional in
# preprocess Hinglish hints and Sanskrit/Indic phoneme tables.
[tool.ruff.lint.per-file-ignores]
"app/preprocess.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_preprocess.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
# scripts/ has no __init__.py and tests load modules via sys.path
# tricks. Point mypy at scripts/ and tell it to walk via package
# bases, then loosen the test/script directories.
mypy_path = "scripts"
exclude = ["^scripts/"]

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*"]
disable_error_code = [
  "arg-type",
  "no-untyped-def",
  "no-untyped-call",
  "unused-ignore",
  "import-untyped",
  "import-not-found",
  "no-any-return",
  "type-arg",
]

[[tool.mypy.overrides]]
module = ["parler_tts", "parler_tts.*", "nemo", "nemo.*"]
ignore_missing_imports = true

# The dynamic-ML loaders (Parler-TTS, IndicF5, NeMo) integrate with
# optional, version-skewed dependencies whose stubs disagree with the
# runtime objects we mock. Strict mypy on these specific modules
# generates noise that does not reflect runtime correctness.
[[tool.mypy.overrides]]
module = [
  "app.parler",
  "app.indicf5",
  "app.nemo",
  "app.model",
  "app.routing",
  "app.preprocess",
  "app.eval",
]
disable_error_code = [
  "unused-ignore",
  "operator",
  "misc",
  "no-any-return",
  "type-arg",
  "no-untyped-call",
]
